fix(review-bot): use uv run python in code-review-bot workflow [OMN-2496]
The workflow used bare `python` after `uv sync`, but the uv virtual
environment is not activated by default in GitHub Actions. Use
`uv run python` so the installed omniintelligence package is found.

--- a/.github/workflows/code-review-bot.yml
+++ b/.github/workflows/code-review-bot.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Run Code Intelligence Review
         id: review
         run: |
-          python -c "
+          uv run python -c "
           import sys
           import os
 
