fix(OMN-2438): harden shared consumer group — validation, count, config rename
On top of OMN-2439 which merged the core shared-group fix:

- Add whitespace validation to _intelligence_consumer_group(): raises
  ValueError for embedded spaces/tabs/newlines (opaque Kafka rejection)
- Hoist _intelligence_consumer_group() call before try block in
  start_consumers() so misconfigured group ID is a hard startup error
- Fix success log/result count from len(INTELLIGENCE_SUBSCRIBE_TOPICS)
  to len(unsubscribe_callbacks) (skipped topics are not counted)
- Rename intelligence-runtime/dev/staging/prod → omniintelligence-*
  across ModelEventBusConfig, ModelIntelligenceRuntimeConfig, and
  runtime_config.yaml for naming consistency
- Add OMNIINTELLIGENCE_CONSUMER_GROUP to optional_variables in contract
  and .env.example
- Add whitespace-rejection tests + strengthen loop regression test with
  result.success assertion and introspection guard reset

--- a/.env.example
+++ b/.env.example
@@ -91,6 +91,14 @@ LLM_QWEN_72B_URL=http://192.168.86.200:8100
 # bootstrap servers are not explicitly configured.
 OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 
+# Shared Kafka consumer group ID for all intelligence topic consumers (OMN-2439).
+# All runtime containers (omninode-runtime, omninode-runtime-effects, runtime-worker-*)
+# must use the same group so Kafka load-balances partitions across the group rather
+# than delivering each message to every container independently.
+# Defaults to "omniintelligence-hooks" when unset or empty.
+# Must not contain whitespace characters.
+# OMNIINTELLIGENCE_CONSUMER_GROUP=omniintelligence-hooks
+
 # Enable real-time event publishing for intelligence operations.
 ENABLE_REAL_TIME_EVENTS=true
 
