fix(promotion): make Kafka producer optional with graceful degradation [OMN-2129]
- CLAUDE.md: Fix Kafka invariant wording — Kafka is optional, not required
- handler_promotion.py: Change producer param to `ProtocolKafkaPublisher | None`;
  skip Kafka emission with warning log when producer is None
- __init__.py: Update docstring to reflect optional Kafka semantics
- contract.yaml: Remove stray #magic___^_^___line artifact from description
- registry: Align docstrings with optional-Kafka invariant

Fixes CodeRabbit issues on PR #129:
- Major: Kafka-required wording conflicts with repo invariants (CLAUDE.md)
- Major: Docstring conflicts with effect-node Kafka-optional invariant (__init__.py)
- Major: Producer made mandatory in handler, violating repo invariant (handler_promotion.py)
- Minor: Stray marker in contract.yaml description

--- a/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
@@ -37,7 +37,7 @@ description: >
   Evaluates patterns against configurable promotion gates (injection count, success rate, failure streak,
   disabled status) and emits lifecycle events for eligible patterns. Supports dry_run mode for previewing
   promotions without committing changes. Kafka is required infrastructure; lifecycle events are always
-  emitted asynchronously. #magic___^_^___line
+  emitted asynchronously.
 # Strongly typed I/O models
 input_model:
   name: "ModelPromotionCheckRequest"
