docs(claude): clarify Kafka is required infrastructure, not optional (#129)
* docs(claude): clarify Kafka is required infrastructure, not optional

Remove the misleading "Optional Kafka (Graceful Degradation)" section
and "Kafka is optional" rationale from the invariants table.

Kafka/Redpanda is required platform infrastructure per the shared
standards in ~/.claude/CLAUDE.md. The correct constraint is that
effect nodes must never *block* on Kafka acks — not that Kafka itself
is optional. Reframes the pattern as non-blocking async emission.

* fix(review): [minor] update kafka_producer required flag in contract YAML example to match Kafka-required invariant

* fix(review): [minor] fix pattern-promoted publisher and split Kafka topics table

- CLAUDE.md: split flat topics table into Subscribed/Published with node attribution;
  move pattern-lifecycle-transition.v1 (cmd topic) out of Published into Subscribed;
  fix pattern-promoted.v1 publisher: NodePatternStorageEffect → NodePatternPromotionEffect
- constants.py: fix docstring for TOPIC_SUFFIX_PATTERN_PROMOTED_V1 to name
  NodePatternPromotionEffect as the publisher, not NodePatternStorageEffect

* fix(review): [major] set kafka_producer required: true in contract.yaml files

The CLAUDE.md example was updated to show required: true for kafka_producer
to reflect the Kafka-required infrastructure invariant, but the actual
contract.yaml files for node_pattern_promotion_effect and
node_pattern_storage_effect still had required: false with descriptions
calling Kafka "optional." Updated both to required: true and corrected
the descriptions to remove the contradictory fallback language.

* fix(review): [minor] remove stale optional-Kafka language from promotion contract

Cleaned up all remaining references to Kafka fallback/optional behavior in
node_pattern_promotion_effect/contract.yaml: updated description, handler
routing comments, promote_pattern actions, event_bus NOTE, and removed the
pattern_promotion.fallback_mode 

--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -299,11 +299,17 @@ dependencies:
     description: "Pattern storage protocol for persisting and retrieving patterns"
     required: true
 
+  # required: false is INTENTIONAL — this node uses the runtime-published pattern:
+  # handlers return typed event models (ModelPatternStoredEvent / ModelPatternPromotedEvent)
+  # and RuntimeHostProcess publishes them to publish_topics automatically.
+  # Kafka is still required infrastructure at runtime; the producer is just not injected
+  # into handler function signatures. See CLAUDE.md invariant notes for details.
   - name: "kafka_producer"
     type: "protocol"
-    class_name: "ProtocolKafkaProducer"
-    module: "omnibase_infra.protocols.protocol_kafka_producer"
-    description: "Kafka producer for emitting pattern storage events"
+    class_name: "ProtocolKafkaPublisher"
+    module: "omniintelligence.protocols"
+    description: "Kafka publisher for emitting pattern storage events. Not injected into handlers — RuntimeHostProcess
+      publishes returned events to declared publish_topics automatically."
     required: false
 
 # =============================================================================
