--- a/src/omniintelligence/nodes/node_chunk_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_chunk_classifier_compute/contract.yaml
@@ -1,4 +1,3 @@
----
 # SPDX-License-Identifier: MIT
 # Copyright (c) 2025 OmniNode Team
 #
@@ -23,31 +22,23 @@ node_version:
   major: 1
   minor: 0
   patch: 0
-
 # Node type
 node_type: "COMPUTE_GENERIC"
-
 # Status
 status: "active"
-
 # Description
 description: >
-  Stream B pure compute node. Classifies raw chunks using the v1 frozen deterministic rule
-  set (7 priority-ordered rules, first match wins). Extracts 6 tag types per chunk and
-  computes SHA-256 content fingerprint and version hash for deduplication and replay safety.
-  Pure function, no I/O. Returns ordered ClassifiedChunk list for EmbeddingGenerationEffect.
+  Stream B pure compute node. Classifies raw chunks using the v1 frozen deterministic rule set (7 priority-ordered rules, first match wins). Extracts 6 tag types per chunk and computes SHA-256 content fingerprint and version hash for deduplication and replay safety. Pure function, no I/O. Returns ordered ClassifiedChunk list for EmbeddingGenerationEffect.
 
 # Strongly typed I/O models
 input_model:
   name: "ModelChunkClassifyInput"
   module: "omniintelligence.nodes.node_chunk_classifier_compute.models"
   description: "Classification request with source metadata and raw chunk sequence."
-
 output_model:
   name: "ModelChunkClassifyOutput"
   module: "omniintelligence.nodes.node_chunk_classifier_compute.models"
   description: "Ordered list of classified chunks with types, tags, and fingerprints."
-
 # =============================================================================
 # HANDLER ROUTING
 # =============================================================================
@@ -72,13 +63,11 @@ handler_routing:
         - "compute SHA-256 content fingerprint of normalized content"
         - "compute SHA-256 version hash of content_fingerprint + source_ref + source_version"
         - "return ordered list of ClassifiedChunk objects"
-
   default_handler:
     function: "handle_chunk_classify"
     module: "omniintelligence.nodes.node_chunk_classifier_compute.handlers.handler_chunk_classifier"
     type: "sync"
     description: "Default to classify_chunks operation"
-
 # =============================================================================
 # IO OPERATIONS
 # =============================================================================
@@ -99,7 +88,6 @@ io_operations:
       - source_ref
       - total_chunks
       - correlation_id
-
 # =============================================================================
 # CLASSIFICATION RULE SET (v1 — FROZEN)
 # =============================================================================
@@ -107,9 +95,8 @@ classification_config:
   rule_version: "v1"
   frozen: true
   description: >
-    Rule order is frozen per contract version. A change to rule order or trigger
-    strings requires a version bump. Without frozen rule order, promotion history
-    is non-replayable.
+    Rule order is frozen per contract version. A change to rule order or trigger strings requires a version bump. Without frozen rule order, promotion history is non-replayable.
+
   rules:
     - priority: 1
       type: "API_CONSTRAINT"
@@ -173,7 +160,6 @@ classification_config:
       type: "DOC_EXCERPT"
       triggers:
         - "default fallback (all unmatched chunks)"
-
 # =============================================================================
 # TAG EXTRACTION
 # =============================================================================
@@ -197,7 +183,6 @@ tag_extraction:
     - name: "doctype"
       format: "doctype:{doc_type}"
       description: "Document class from input doc_type field"
-
 # =============================================================================
 # FINGERPRINTING
 # =============================================================================
@@ -210,7 +195,6 @@ fingerprinting:
     algorithm: "sha256"
     input: "json({content_fingerprint, source_ref, source_version}, sort_keys=True)"
     description: "Change-detection hash — differs if content, source, or version changes"
-
 # =============================================================================
 # ERROR HANDLING
 # =============================================================================
@@ -218,22 +202,19 @@ error_handling:
   retry_policy:
     max_retries: 0
     description: "Pure compute node — no retries needed"
-
   error_types:
     - name: "EmptyChunkListError"
       error_code: "CHUNKCLASSIFY_001"
       description: "Input raw_chunks is empty — returns empty classified_chunks list"
       recoverable: false
       retry_strategy: "none"
-
 # =============================================================================
 # IDEMPOTENCY
 # =============================================================================
 idempotency:
   enabled: true
   description: >
-    Pure function with frozen rule set — same input always produces same output.
-    Fully replay-safe. content_fingerprint and version_hash enable deduplication.
+    Pure function with frozen rule set — same input always produces same output. Fully replay-safe. content_fingerprint and version_hash enable deduplication.
 
 # =============================================================================
 # HEALTH CHECK
@@ -241,7 +222,6 @@ idempotency:
 health_check:
   enabled: false
   description: "Pure compute node — no health check needed"
-
 # =============================================================================
 # METADATA
 # =============================================================================
