--- a/src/omniintelligence/nodes/node_embedding_generation_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_embedding_generation_effect/contract.yaml
@@ -1,4 +1,3 @@
----
 # SPDX-License-Identifier: MIT
 # Copyright (c) 2025 OmniNode Team
 #
@@ -23,31 +22,23 @@ node_version:
   major: 1
   minor: 0
   patch: 0
-
 # Node type
 node_type: "EFFECT_GENERIC"
-
 # Status
 status: "active"
-
 # Description
 description: >
-  Stream B effect node. Generates 1024-dimensional embeddings for classified chunks via the
-  Qwen3-Embedding-8B-4bit server (port 8100). Skips empty chunks, batches via
-  get_embeddings_batch, retries failed chunks individually, dead-letters persistent failures.
-  Passes EmbeddedChunk list to ContextItemWriterEffect for Qdrant storage.
+  Stream B effect node. Generates 1024-dimensional embeddings for classified chunks via the Qwen3-Embedding-8B-4bit server (port 8100). Skips empty chunks, batches via get_embeddings_batch, retries failed chunks individually, dead-letters persistent failures. Passes EmbeddedChunk list to ContextItemWriterEffect for Qdrant storage.
 
 # Strongly typed I/O models
 input_model:
   name: "ModelEmbeddingGenerateInput"
   module: "omniintelligence.nodes.node_embedding_generation_effect.models"
   description: "Classified chunks with embedding server URL and source metadata."
-
 output_model:
   name: "ModelEmbeddingGenerateOutput"
   module: "omniintelligence.nodes.node_embedding_generation_effect.models"
   description: "Embedded chunks with 1024-dim vectors and skip/fail counts."
-
 # =============================================================================
 # HANDLER ROUTING
 # =============================================================================
@@ -72,13 +63,11 @@ handler_routing:
         - "on persistent individual failure: dead-letter (counted in failed_chunks)"
         - "attach 1024-dim embedding tuple to each successful chunk"
         - "return ModelEmbeddingGenerateOutput with embedded_chunks and counts"
-
   default_handler:
     function: "handle_embedding_generate"
     module: "omniintelligence.nodes.node_embedding_generation_effect.handlers.handler_embedding_generate"
     type: "async"
     description: "Default to generate_embeddings operation"
-
 # =============================================================================
 # IO OPERATIONS
 # =============================================================================
@@ -99,7 +88,6 @@ io_operations:
       - skipped_chunks
       - failed_chunks
       - correlation_id
-
 # =============================================================================
 # EMBEDDING CONFIGURATION
 # =============================================================================
@@ -114,7 +102,6 @@ embedding_config:
     max_retries: 5
     retry_base_delay: 0.5
     max_concurrency: 5
-
 # =============================================================================
 # ERROR HANDLING
 # =============================================================================
@@ -124,40 +111,34 @@ error_handling:
     strategy: "exponential_backoff"
     base_delay_seconds: 0.5
     description: "Per-chunk retry with exponential backoff"
-
   error_types:
     - name: "EmptyChunkSkip"
       error_code: "EMBEDGEN_001"
       description: "Chunk with empty content skipped — counted in skipped_chunks"
       recoverable: false
       retry_strategy: "none"
-
     - name: "BatchEmbeddingFailure"
       error_code: "EMBEDGEN_002"
       description: "Batch embedding failed — retried individually per chunk"
       recoverable: true
       retry_strategy: "individual_retry"
-
     - name: "PersistentEmbeddingFailure"
       error_code: "EMBEDGEN_003"
       description: "Individual chunk failed after all retries — dead-lettered"
       recoverable: false
       retry_strategy: "dead_letter"
-
     - name: "ConnectionFailure"
       error_code: "EMBEDGEN_004"
       description: "Endpoint unreachable — propagates to caller for document-level dead-letter"
       recoverable: true
       retry_strategy: "exponential_backoff"
-
 # =============================================================================
 # IDEMPOTENCY
 # =============================================================================
 idempotency:
   enabled: false
   description: >
-    Effect node with external I/O — not idempotent. Callers should use
-    content_fingerprint from ModelClassifiedChunk for deduplication before calling.
+    Effect node with external I/O — not idempotent. Callers should use content_fingerprint from ModelClassifiedChunk for deduplication before calling.
 
 # =============================================================================
 # HEALTH CHECK
@@ -168,7 +149,6 @@ health_check:
   endpoint: "/embed"
   method: "POST"
   test_payload: '{"text": "health check"}'
-
 # =============================================================================
 # METADATA
 # =============================================================================
