fix(yamlfmt): apply yamlfmt to io_audit_whitelist.yaml [OMN-2389]
yamlfmt reformats multi-line reason string to fit within max_line_length
and adds document start marker.

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -72,8 +72,8 @@ files:
   # DocumentFetchEffect (OMN-2389) — reads file content from disk for filesystem
   # and git_repo crawl sources. File I/O is the core responsibility of this Effect node.
   - path: "src/omniintelligence/nodes/node_document_fetch_effect/handlers/handler_document_fetch.py"
-    reason: "Effect node reads document content from disk (filesystem and git_repo sources); file I/O is the
-      intended responsibility of this Effect node"
+    reason: "Effect node reads document content from disk (filesystem and git_repo sources); file I/O
+      is the intended responsibility of this Effect node"
     allowed_rules:
       - "file-io"
 
