--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 # =============================================================================
 # DEPENDENCY MANAGEMENT NOTES
 # =============================================================================
-# This project uses uv/PEP 621 dependency management with hatchling build backend.
+# This project uses uv/PEP 621 dependency management.
 #
 # EDITABLE INSTALLS & uv.lock:
 #   Editable installs (pip install -e .) bypass uv.lock resolution.
@@ -15,16 +15,16 @@ build-backend = "hatchling.build"
 #     3. Verify sync: uv sync --group dev
 # =============================================================================
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/omniintelligence"]
-
 [project]
 name = "omniintelligence"
-version = "0.5.0"
+version = "0.6.0"
 description = "Intelligence, indexing, and pattern services as first-class Omninode nodes"
-authors = [{name = "OmniNode Team", email = "team@omninode.ai"}]
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
+license = { text = "MIT" }
+authors = [{ name = "OmniNode.ai", email = "contact@omninode.ai" }]
+keywords = ["omninode", "intelligence", "intent", "routing", "onex", "llm"]
+# Versions aligned with [dependency-groups].core for consistency
 dependencies = [
     "httpx>=0.28.1",
     "pyyaml>=6.0",
@@ -36,11 +36,22 @@ dependencies = [
     "watchdog>=6.0.0",
 ]
 
+[project.urls]
+Homepage = "https://github.com/OmniNode-ai/omniintelligence"
+Repository = "https://github.com/OmniNode-ai/omniintelligence"
+Documentation = "https://github.com/OmniNode-ai/omniintelligence/tree/main/docs"
+Issues = "https://github.com/OmniNode-ai/omniintelligence/issues"
+Changelog = "https://github.com/OmniNode-ai/omniintelligence/blob/main/CHANGELOG.md"
+
 [project.entry-points."onex.domain_plugins"]
 intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/omniintelligence"]
+
 [dependency-groups]
 # Development dependencies for linting and testing
+# Versions aligned with [tool.poetry.group.dev.dependencies] for consistency
 dev = [
     "mypy>=1.17.0",
     "types-PyYAML>=6.0.0",
@@ -57,9 +68,14 @@ dev = [
 ]
 
 # Core node system dependencies
+# Version constraints aligned with caret syntax:
+#   ^0.18.1 = >=0.18.1,<0.19.0  (compatible releases within 0.18.x)
+#   ^0.10.0 = >=0.10.0,<0.11.0  (compatible releases within 0.10.x)
+#   ^0.9.0 = >=0.9.0,<0.10.0  (compatible releases within 0.9.x)
 core = [
     # ONEX private ecosystem dependencies (NOT on public PyPI)
     # Installed via editable installs from sibling repos or private registry.
+    # Version bounds match Poetry caret syntax above.
     "omnibase-core>=0.18.1,<0.19.0",
     "omnibase-spi>=0.10.0,<0.11.0",
     "omnibase-infra>=0.9.0,<0.10.0",
