fix(OMN-2719): resolve CONTRACT_DRIFT for crawl-requested.v1 — document producer ownership and fix git_repo_crawler topic mismatch
- node_crawl_scheduler_effect/contract.yaml: document that node_watchdog_effect
  (omniintelligence) is the crawl-requested.v1 producer; no external omnimemory
  producer is needed — the trigger chain is internal to omniintelligence
- node_git_repo_crawler_effect/contract.yaml: fix subscribe_topics from
  onex.evt.omnimemory.crawl-requested.v1 (wrong evt prefix) to
  onex.cmd.omnimemory.crawl-tick.v1 (correct downstream topic from CrawlSchedulerEffect)
- test_contract_topics.py: add OMN-2719 comment clarifying producer ownership

Closes OMN-2719

--- a/src/omniintelligence/nodes/node_crawl_scheduler_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_crawl_scheduler_effect/contract.yaml
@@ -204,6 +204,10 @@ event_bus:
   event_bus_enabled: true
 
   # Topics this node subscribes to (receives events from)
+  # Producer for crawl-requested.v1: node_watchdog_effect (omniintelligence) emits
+  # on filesystem change events.  Other potential producers: git post-commit hooks,
+  # CLI/MCP manual triggers.  The topic is internal to omniintelligence — no
+  # external producer from omnimemory or other repos is required (OMN-2719).
   subscribe_topics:
     - "{env}.onex.cmd.omnimemory.crawl-requested.v1"
     - "{env}.onex.evt.omnimemory.document-indexed.v1"
@@ -216,7 +220,11 @@ event_bus:
   subscribe_topic_metadata:
     "{env}.onex.cmd.omnimemory.crawl-requested.v1":
       schema_ref: "omniintelligence.nodes.node_crawl_scheduler_effect.models.ModelCrawlRequestedEvent"
-      description: "Manual crawl trigger events from CLI, MCP, git hooks, and watchdog"
+      description: >
+        Manual crawl trigger events from CLI, MCP, git hooks, and filesystem watchdog. Producer: node_watchdog_effect
+        (omniintelligence) — emits on OS-level file change events. Additional producers: git post-commit
+        hooks, omniclaude MCP triggers. Ownership: trigger is internal to omniintelligence; no omnimemory
+        producer needed.
     "{env}.onex.evt.omnimemory.document-indexed.v1":
       schema_ref: "object"
       description: >
