fix(OMN-2719): resolve CONTRACT_DRIFT for crawl-requested.v1 — document producer ownership and fix git_repo_crawler topic mismatch (#177)
- node_crawl_scheduler_effect/contract.yaml: document that node_watchdog_effect
  (omniintelligence) is the crawl-requested.v1 producer; no external omnimemory
  producer is needed — the trigger chain is internal to omniintelligence
- node_git_repo_crawler_effect/contract.yaml: fix subscribe_topics from
  onex.evt.omnimemory.crawl-requested.v1 (wrong evt prefix) to
  onex.cmd.omnimemory.crawl-tick.v1 (correct downstream topic from CrawlSchedulerEffect)
- test_contract_topics.py: add OMN-2719 comment clarifying producer ownership

Closes OMN-2719

--- a/src/omniintelligence/nodes/node_git_repo_crawler_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_git_repo_crawler_effect/contract.yaml
@@ -151,7 +151,7 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "{env}.onex.evt.omnimemory.crawl-requested.v1"
+    - "{env}.onex.cmd.omnimemory.crawl-tick.v1"
 
   publish_topics:
     - "{env}.onex.evt.omnimemory.document-discovered.v1"
@@ -159,9 +159,12 @@ event_bus:
     - "{env}.onex.evt.omnimemory.document-removed.v1"
 
   subscribe_topic_metadata:
-    "{env}.onex.evt.omnimemory.crawl-requested.v1":
+    "{env}.onex.cmd.omnimemory.crawl-tick.v1":
       schema_ref: "omniintelligence.nodes.node_git_repo_crawler_effect.models.ModelGitRepoCrawlInput"
-      description: "Crawl request events from CrawlSchedulerEffect or git post-commit hook."
+      description: >
+        Crawl tick commands from CrawlSchedulerEffect (node_crawl_scheduler_effect). The scheduler emits
+        crawl-tick.v1 on periodic ticks and manual triggers. Previously incorrectly declared as onex.evt.omnimemory.crawl-requested.v1
+        (OMN-2719).
       content_type: "application/json"
 
   publish_topic_metadata:
